welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: type mismatch;
 found   : String
 required: Boolean
while (litMessage()) {
                 ^